# IDP

./: .gitignore  alembic.ini  main.py  main_dk.py  main_karolis.py  pyproject.toml  readme.txt
data/: idp.db  populate_db.py
docs/: Sukurkite igudziu dalijimosi platforma.txt
migrations/: env.py
migrations/versions/: 1541c1c7d7f1_populate_user_skill_skill_rating_user_.py  2998ed42b25d_pradine_db_struktura.py  4d3beb7698da_populate_user_skill_skill_rating_user_.py  57454267e007_pradine_db_struktura.py  677f80545ea4_init.py  91057c887026_pradine_db_struktura.py
model/: idp_classes.py  idp_crud.py
