[tool.poetry]
name = "idp"
version = "0.1.0"
description = "igudziu dalinimosi platforma"
authors = ["student-d-k <daumantas.kudzma@codeacademylt.onmicrosoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
